EDAN01/minizinc-1.6/tests/flattening/test-mzn2fzn/misc_float_set_type.exp
mzn2fzn:
  error: 
  misc_float_set_type.mzn:1 
  In variable declaration for 'x1'. 
  '{...}' is not supported as a float type.
