EDAN01/minizinc-1.6/tests/flattening/test-mzn2fzn/misc_float_set_type.mzn
var {0.0, 1.0}: x1;
solve satisfy;
